<resources>
    <string name="app_name">My News</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="search">SEARCH</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="search_menu">Search</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="health_and_fitness">Health &amp; Fitness</string>
    <string name="science">Science</string>
    <string name="your_money">Your Money</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="save_notifParams__key">pref_key_params</string>
    <string name="save_query_item__key">pref_key_queryitem</string>
    <string name="save_categories__key">pref_categories_day</string>
    <string name="save_dayLong__key">pref_keyLong_day</string>

    <string name="notificationTitle">You have %1$d new article(s)</string>
    <string name="about_my_news">About My News</string>
    <string name="open_classroom_projet_5">Open Classroom projet 5</string>
    <string name="c_2018">c. 2018</string>
    <string name="webview_title">Articles</string>
    <string name="search_articles">Search Articles</string>
    <string name="news_desk_business">news_desk:(\"Business\")</string>
    <string name="error_msg_rxjava">an error occurred</string>
    <string name="browser_required">Please install a browser</string>
    <string name="no_result_search">no result was found</string>
    <string name="empty_checkbox_msg">you must check a list one box</string>
    <string name="missing_query_item_msg">you must enter a query item</string>
    <string name="No_result_was_were_found">No result(s) was / were found</string>

    <string-array name="topicArray">

        <item> @string/arts</item>
        <item> @string/business</item>
        <item> @string/entrepreneurs</item>
        <item> @string/politics</item>
        <item> @string/sports</item>
        <item> @string/travel</item>

    </string-array>
    <string name="title_activity_base_seach_notif">BaseSeachNotifActivity</string>
</resources>
