<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item
        android:id="@+id/menu_drawer_arts"
        android:title="@string/arts"
        android:icon="@drawable/ic_font_download_black_24dp"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menu_drawer_healthfitness"
        android:icon="@drawable/ic_local_hospital_black_24dp"
        android:title="@string/health_and_fitness"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menu_drawer_science"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/science"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_drawer_money"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/your_money"
        app:showAsAction="never">

    </item>


</menu>
