<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_my_news"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userInputDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_classroom_projet_5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_2018"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

</LinearLayout>